ConvertMixin: to_row_stream() renamed to to_rows()

--- a/enteropia_test_case.ipynb
+++ b/enteropia_test_case.ipynb
@@ -1794,8 +1794,9 @@
     }
    ],
    "source": [
-    "stream_sepulcarium_state = tsv_sepulka_state.to_record_stream().join(\n",
-    "    tsv_sepulka_master.to_record_stream(),\n",
+    "stream_sepulcarium_state = tsv_sepulka_state.to_records(\n",
+    ").join(\n",
+    "    tsv_sepulka_master.to_records(),\n",
     "    key=SEPULKA_ID,\n",
     "    how='left',\n",
     ").group_by(\n",
